# gtk4-background-app-demo

./: .gitignore  Cargo.toml  README.md  com.github.gtkrs.BackgroundDemo.desktop  com.github.gtkrs.BackgroundDemo.yml  install-desktop-file.sh  run.sh
src/: main.rs
