[package]
name = "gtk4-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = { version = "0.19"}
gio = { version = "0.19" }
gdk = { package = "gdk4", version = "0.8"}
gtk = { package = "gtk4", version = "0.8", features = ["v4_10"] }

env_logger = { version = "0.11.1"}
log = "0.4.20"

ashpd = { version = "0.7.0", features = ["gtk4"] }
nix = { version = "0.27.1", features = ["fs"] }
